<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_3" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="402" height="874"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aqT-T5-qTr" userLabel="Preview Image">
                                <rect key="frame" x="20" y="177.66666666666666" width="362" height="430.33333333333337"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                            </imageView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Рейтинг этого фильма меньше чем 5?" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fqg-bJ-GO0" userLabel="Question Label">
                                <rect key="frame" x="-20" y="628" width="442" height="78"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="78" id="p4q-S0-l1J"/>
                                </constraints>
                                <fontDescription key="fontDescription" name="YSDisplay-Bold" family="YS Display" pointSize="23"/>
                                <color key="textColor" name="YP White"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="8BI-7F-q1R">
                                <rect key="frame" x="20" y="726" width="362" height="60"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C70-13-sDB" userLabel="No button">
                                        <rect key="frame" x="0.0" y="0.0" width="171" height="60"/>
                                        <color key="backgroundColor" name="YP White"/>
                                        <accessibility key="accessibilityConfiguration" identifier="No"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Нет">
                                            <color key="titleColor" name="YP Black"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="15"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MFh-f6-3xf"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cfM-Z0-6mI" userLabel="Yes button">
                                        <rect key="frame" x="191" y="0.0" width="171" height="60"/>
                                        <color key="backgroundColor" name="YP White"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Да">
                                            <color key="titleColor" name="YP Black"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                <integer key="value" value="15"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="icK-4V-usm"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="EhF-Eb-Sx6"/>
                                </constraints>
                            </stackView>
                            <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="QdE-Vu-Ih7">
                                <rect key="frame" x="20" y="134" width="362" height="23.666666666666657"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Вопрос:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pPV-g6-YJL" userLabel="Question Title Label">
                                        <rect key="frame" x="0.0" y="0.0" width="318" height="23.666666666666668"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                        <color key="textColor" name="YP White"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ejU-Wd-Xwq" userLabel="Index Label">
                                        <rect key="frame" x="326" y="0.0" width="36" height="23.666666666666668"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                        <fontDescription key="fontDescription" name="YSDisplay-Medium" family="YS Display" pointSize="20"/>
                                        <color key="textColor" name="YP White"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="wOf-JM-4f4">
                                <rect key="frame" x="191" y="383" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black"/>
                        <constraints>
                            <constraint firstItem="wOf-JM-4f4" firstAttribute="centerX" secondItem="aqT-T5-qTr" secondAttribute="centerX" id="4se-sV-WM0"/>
                            <constraint firstItem="aqT-T5-qTr" firstAttribute="top" secondItem="QdE-Vu-Ih7" secondAttribute="bottom" constant="20" id="6Y3-P8-3e5"/>
                            <constraint firstItem="QdE-Vu-Ih7" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="Act-Jo-mzB"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="aqT-T5-qTr" secondAttribute="trailing" constant="20" id="Ekh-mY-5Vq"/>
                            <constraint firstItem="QdE-Vu-Ih7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="FeN-UL-iDm"/>
                            <constraint firstItem="Fqg-bJ-GO0" firstAttribute="top" secondItem="aqT-T5-qTr" secondAttribute="bottom" constant="20" id="Hdc-4b-Jc9"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="8BI-7F-q1R" secondAttribute="trailing" constant="20" id="IIR-Ug-vGO"/>
                            <constraint firstItem="Fqg-bJ-GO0" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" constant="20" id="ISX-A0-Zre"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="leading" secondItem="Fqg-bJ-GO0" secondAttribute="leading" constant="20" id="Lgl-df-AR1"/>
                            <constraint firstItem="8BI-7F-q1R" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="fYL-43-mVM"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="8BI-7F-q1R" secondAttribute="bottom" constant="20" id="htk-pO-llf"/>
                            <constraint firstItem="wOf-JM-4f4" firstAttribute="centerY" secondItem="aqT-T5-qTr" secondAttribute="centerY" id="jkF-oE-ux0"/>
                            <constraint firstItem="8BI-7F-q1R" firstAttribute="top" secondItem="Fqg-bJ-GO0" secondAttribute="bottom" constant="20" id="oVd-9x-dto"/>
                            <constraint firstAttribute="trailing" secondItem="QdE-Vu-Ih7" secondAttribute="trailing" constant="20" id="rvF-m8-j3I"/>
                            <constraint firstItem="aqT-T5-qTr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="xrL-HS-dPd"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="wOf-JM-4f4" id="Soc-cJ-rey"/>
                        <outlet property="counterLabel" destination="ejU-Wd-Xwq" id="ggH-JI-ftr"/>
                        <outlet property="imageView" destination="aqT-T5-qTr" id="rKg-v3-Q8M"/>
                        <outlet property="noButton" destination="C70-13-sDB" id="XPu-gA-Ngz"/>
                        <outlet property="textLabel" destination="Fqg-bJ-GO0" id="cCR-5M-0kF"/>
                        <outlet property="yesButton" destination="cfM-Z0-6mI" id="LfX-b3-7wW"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-56.71641791044776" y="54.233409610983976"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black">
            <color red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
